Adding support for category of transaction
Added a dropdown menu and connected it to the category enum
updated the ExecuteSql function

--- a/FinancialDashboard/MainWindow.xaml
+++ b/FinancialDashboard/MainWindow.xaml
@@ -6,6 +6,10 @@
         <!-- TextBox for SQL Input -->
         <TextBox x:Name="QueryInput" Width="400" Height="30" VerticalAlignment="Top" Margin="10"/>
 
+        <!-- ComboBox for Category Selection -->
+        <ComboBox x:Name="CategoryDropdown" Width="200" Height="30" VerticalAlignment="Top" Margin="10,40,0,0" 
+                  ItemsSource="{Binding}" SelectedItem="{Binding SelectedCategory}"/>
+
         <!-- Submit Button -->
         <Button Content="Submit" Width="100" Height="30" VerticalAlignment="Top" Margin="10,80,0,0" Click="SubmitQuery"/>
 
