Updating UI - adding a record and executing query
Now UI has two functionalities where the two buttons
allow for adding a record or executing sql queries

--- a/FinancialDashboard/MainWindow.xaml
+++ b/FinancialDashboard/MainWindow.xaml
@@ -1,19 +1,36 @@
 ﻿<Window x:Class="FinancialDashboard.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Financial Dashboard" Height="400" Width="525">
+        Title="Financial Dashboard" Height="450" Width="600">
     <Grid>
-        <!-- TextBox for SQL Input -->
-        <TextBox x:Name="QueryInput" Width="400" Height="30" VerticalAlignment="Top" Margin="10"/>
+        <!-- TextBox for Value -->
+        <TextBlock Text="Value:" VerticalAlignment="Top" Margin="10,10,0,0"/>
+        <TextBox x:Name="ValueInput" Width="200" Height="30" VerticalAlignment="Top" Margin="100,10,0,0"/>
+
+        <!-- TextBox for Description -->
+        <TextBlock Text="Description:" VerticalAlignment="Top" Margin="10,50,0,0"/>
+        <TextBox x:Name="DescriptionInput" Width="400" Height="30" VerticalAlignment="Top" Margin="100,50,0,0"/>
 
         <!-- ComboBox for Category Selection -->
-        <ComboBox x:Name="CategoryDropdown" Width="200" Height="30" VerticalAlignment="Top" Margin="10,40,0,0" 
+        <TextBlock Text="Category:" VerticalAlignment="Top" Margin="10,90,0,0"/>
+        <ComboBox x:Name="CategoryDropdown" Width="200" Height="30" VerticalAlignment="Top" Margin="100,90,0,0"
                   ItemsSource="{Binding}" SelectedItem="{Binding SelectedCategory}"/>
 
-        <!-- Submit Button -->
-        <Button Content="Submit" Width="100" Height="30" VerticalAlignment="Top" Margin="10,80,0,0" Click="SubmitQuery"/>
+        <!-- Date Picker for Date -->
+        <TextBlock Text="Date:" VerticalAlignment="Top" Margin="10,130,0,0"/>
+        <DatePicker x:Name="DateInput" Width="200" Height="30" VerticalAlignment="Top" Margin="100,130,0,0"/>
+
+        <!-- Add Record Button -->
+        <Button Content="Add Record" Width="100" Height="30" VerticalAlignment="Top" Margin="10,180,0,0" Click="AddRecord"/>
+
+        <!-- TextBox for SQL Input -->
+        <TextBlock Text="Custom SQL Query:" VerticalAlignment="Top" Margin="10,220,0,0"/>
+        <TextBox x:Name="QueryInput" Width="400" Height="30" VerticalAlignment="Top" Margin="10,250,0,0"/>
+
+        <!-- Execute SQL Button -->
+        <Button Content="Execute SQL" Width="100" Height="30" VerticalAlignment="Top" Margin="420,250,0,0" Click="ExecuteQuery"/>
 
         <!-- TextBlock for displaying results -->
-        <TextBlock x:Name="ResultOutput" Width="400" Height="200" VerticalAlignment="Top" Margin="10,120,0,0" TextWrapping="Wrap"/>
+        <TextBlock x:Name="ResultOutput" Width="550" Height="100" VerticalAlignment="Top" Margin="10,300,0,0" TextWrapping="Wrap"/>
     </Grid>
 </Window>
