--- a/FinancialDashboard/MainWindow.xaml
+++ b/FinancialDashboard/MainWindow.xaml
@@ -21,7 +21,11 @@
         <DatePicker x:Name="DateInput" Width="200" Height="30" VerticalAlignment="Top" Margin="100,130,0,0"/>
 
         <!-- Add Record Button -->
-        <Button Content="Add Record" Width="100" Height="30" VerticalAlignment="Top" Margin="10,180,0,0" Click="AddRecord"/>
+        <Button Content="Add Record" Width="100" Height="30" VerticalAlignment="Top" Margin="-100,170,0,0" Click="AddRecord"/>
+
+        <!-- Button for exporting the database -->
+        <Button Content="Export to CSV" Width="100" Height="30" VerticalAlignment="Top" Margin="200,170,0,0" Click="ExportToCsv_Click"/>
+            
 
         <!-- TextBox for SQL Input -->
         <TextBlock Text="Custom SQL Query:" VerticalAlignment="Top" Margin="10,220,0,0"/>
@@ -32,5 +36,6 @@
 
         <!-- TextBlock for displaying results -->
         <TextBlock x:Name="ResultOutput" Width="550" Height="100" VerticalAlignment="Top" Margin="10,300,0,0" TextWrapping="Wrap"/>
+
     </Grid>
 </Window>
